--- a/html e css/modulo 02/desafio 10/style/style.css
+++ b/html e css/modulo 02/desafio 10/style/style.css
@@ -1,5 +1,113 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+    font-family: 'Android';
+    src: url(../fonts/idroid.otf) format('opentype');
+    font-weight: normal;
+}
+
+:root {
+    --color0: #c5ebd6;
+    --color1: #83e1ad;
+    --color2: #3ddc84;
+    --color3: #2fa866;
+    --color4: #1a5c37;
+    --color5: #063d1e;
+
+    --default-font: Arial, Verdana, Helvetica, sans-serif;
+    --featured-font: 'Bebas Neue', cursive;
+    --android-font: 'Android', cursive;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     background-color: #c5ebd6;
+    font-family: var(--default-font);
+}
+
+header {
+    background-image: linear-gradient(to bottom, var(--color3), var(--color5) );
+    min-height: 150px;
+    text-align: center;
+    padding-top: 70px;
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--featured-font);
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px black;
+}
+
+header > p {
+    font-family: var(--default-font);
+    font-size: 1.2em;
+    color: white;
+    max-width: 600px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: auto;
+    text-shadow: 2px 2px 0px black;
+}
+
+nav {
+    background-color: var(--color5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
+}
+
+nav > a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition-duration: 0.5s;
+}
+
+nav > a:hover {
+    background-color: var(--color3);
+    color: var(--color4);
+}
+
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    background-color: white;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px black;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+main h1 {
+    color: var(--color5);
+    font-family: var(--android-font);
+}
+
+main img {
+    width: 100%;
+}
+main img.small {
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+
+main h2 {
+    font-family: var(--android-font);
+}
+
+footer {
+    background-color: var(--color5);
+    color: white;
 }
